Done with chatbot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:h2:mem:weatherify
 spring.h2.console.enabled=true
 server.port=2018
+
+openai.api.key=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
+openai.model=gpt-3.5-turbo
+openai.api.url=https://api.openai.com/v1/chat/completions
+
